@@ -2,92 +2,96 @@
 /*
 Addon Name: Membership Login Widget
 Description: Membership widgets
-Author: Barry (Incsub)
+Author: Incsub
 Author URI: http://premium.wpmudev.org
 */
 
 class membershiploginwidget extends WP_Widget {
 
-	function membershiploginwidget() {
+	const NAME = __CLASS__;
 
-		$locale = apply_filters( 'membership_locale', get_locale() );
-		$mofile = membership_dir( "membershipincludes/languages/membership-$locale.mo" );
-
-		if ( file_exists( $mofile ) )
-			load_textdomain( 'membership', $mofile );
-
-		$widget_ops = array( 'classname' => 'membershiploginwidget', 'description' => __('Membership Login Widget', 'membership') );
-		$control_ops = array('width' => 400, 'height' => 350, 'id_base' => 'membershiploginwidget');
-		$this->WP_Widget( 'membershiploginwidget', __('Membership Login Widget', 'membership'), $widget_ops, $control_ops );
+	/**
+	 * Constructor.
+	 *
+	 * @access public
+	 */
+	public function __construct() {
+		parent::__construct( 'membershiploginwidget', __( 'Membership Login Widget', 'membership' ), array(
+			'classname'   => 'membershiploginwidget',
+			'description' => __( 'Membership Login Widget', 'membership' )
+		), array(
+			'id_base' => 'membershiploginwidget'
+		) );
 	}
 
-	function widget( $args, $instance ) {
 
-		extract( $args );
-
-		// build the check array
+	/**
+	 * Renders the widget content
+	 *
+	 * @access public
+	 * @param array $args Display arguments including before_title, after_title, before_widget, and after_widget.
+	 * @param array $instance The settings for the particular instance of the widget
+	 */
+	public function widget( $args, $instance ) {
 		$defaults = array(
-			'redirect' 		=> ''
+			'redirect' => '',
+			'lostpass' => '',
 		);
 
-		foreach($defaults as $key => $value) {
-			if(isset($instance[$key])) {
+		foreach ( array_keys( $defaults ) as $key ) {
+			if ( isset( $instance[$key] ) ) {
 				$defaults[$key] = $instance[$key];
 			}
 		}
 
-		extract($defaults);
-
-		if( empty($redirect) ) {
-			echo do_shortcode("[membershiplogin]");
-		} else {
-			echo do_shortcode("[membershiplogin redirect='" . $redirect . "']");
+		$shortcode = "[membershiplogin";
+		foreach ( $defaults as $key => $value ) {
+			$shortcode .= ' ' . $key . '="' . $value . '"';
 		}
+		$shortcode .= ']';
 
+		echo $args['before_widget'];
+			$title = apply_filters( 'widget_title', isset( $instance['title'] ) ? $instance['title'] : '' );
+			if ( !empty( $title ) ) {
+				echo $args['before_title'] . $title . $args['after_title'];
+			}
+
+			echo do_shortcode( $shortcode );
+		echo $args['after_widget'];
 	}
 
-	function update( $new_instance, $old_instance ) {
-		$instance = $old_instance;
+	/**
+	 * Renders the settings update form.
+	 *
+	 * @access public
+	 * @param array $instance Current settings array.
+	 */
+	public function form( $instance ) {
+		$instance = wp_parse_args( (array)$instance, array(
+			'title'    => '',
+			'redirect' => '',
+			'lostpass' => '',
+		) );
 
-		$defaults = array(
-			'redirect' 		=> ''
-		);
-
-		foreach ( $defaults as $key => $val ) {
-			$instance[$key] = $new_instance[$key];
-		}
-
-
-		return $instance;
+		?><p>
+			<label for="<?php echo $this->get_field_id( 'title' ) ?>"><?php _e( 'Title:', 'membership' ) ?></label>
+			<input type="text"  id="<?php echo $this->get_field_id( 'title' ) ?>" class="widefat" name="<?php echo $this->get_field_name( 'title' ) ?>" value="<?php echo esc_attr( $instance['title'] ) ?>">
+		</p>
+		<p>
+			<label for="<?php echo $this->get_field_id( 'redirect' ) ?>"><?php _e( 'Redirect:', 'membership' ) ?></label>
+			<input type="text"  id="<?php echo $this->get_field_id( 'redirect' ) ?>" class="widefat" name="<?php echo $this->get_field_name( 'redirect' ) ?>" value="<?php echo esc_attr( $instance['redirect'] ) ?>">
+			<span class="description"><?php _e( 'Set a URL to redirect to (leave blank to use current page).', 'membership' ) ?></span>
+		</p>
+		<p>
+			<label for="<?php echo $this->get_field_id( 'lostpass' ) ?>"><?php _e( 'Lost Password Link:', 'membership' ) ?></label>
+			<input type="text"  id="<?php echo $this->get_field_id( 'lostpass' ) ?>" class="widefat" name="<?php echo $this->get_field_name( 'lostpass' ) ?>" value="<?php echo esc_attr( $instance['lostpass'] ) ?>">
+			<span class="description"><?php _e( 'Set a URL to lost password restoring page or leave it blank to skip it.', 'membership' ) ?></span>
+		</p><?php
 	}
 
-
-	function form( $instance ) {
-
-		$defaults = array(
-			'redirect' 		=> ''
-		);
-		$instance = wp_parse_args( (array) $instance, $defaults );
-
-		extract($instance);
-
-		?>
-			<p>
-				<?php _e('Set a URL to redirect to (leave blank to use current page):','membership'); ?>
-			</p>
-			<p>
-				<?php _e('Redirect','membership'); ?><br/>
-				<input type='text' class='widefat' name='<?php echo $this->get_field_name( 'redirect' ); ?>' id='<?php echo $this->get_field_id( 'redirect' ); ?>' value='<?php echo esc_attr($instance['redirect']); ?>' />
-			</p>
-	<?php
-	}
-}
-
-function membershiploginwidget_register() {
-	register_widget( 'membershiploginwidget' );
 }
 
 add_action( 'widgets_init', 'membershiploginwidget_register' );
-
-
-?>
+function membershiploginwidget_register() {
+	register_widget( membershiploginwidget::NAME );
+}
